--- a/test.tex
+++ b/test.tex
@@ -42,26 +42,13 @@
    captionpos=b
 }
 \makeindex
-\title{Carnet de bord TN09}
-\author{David KONAM}
+\title{Document sans titre}
+\author{Entrez votre nom}
 \date{\today}
 \begin{document}
 \maketitle
 \newpage
-\tableofcontents
-\newpage
-\section{Semaine 1}
-\begin{itemize}
-\item Accueil  et  documentation  sur  les  liaisons  de  données  tactiques
-\item Elaboration  du  sujet  de  stage
-\end{itemize}
+\includegraphics{./57cb1fb703894.png}
+legende image
 ~\\
-\section{Semaine 2}
-\section{Semaine 3}
-\section{Semaine 4}
-\section{Semaine 5}
-\section{Semaine 6}
-\section{Semaine 7}
-\section{Semaine 8}
-\section{Semaine 9}
 \end{document}
