--- a/test.tex
+++ b/test.tex
@@ -48,7 +48,7 @@
 \begin{document}
 \maketitle
 \newpage
-\includegraphics{./57cb1fb703894.png}
+\includegraphics{57cb1fb703894.png}
 legende image
 ~\\
 \end{document}
